Adjusting display of recently used apps for spacing and width on smaller screens; footer include fix; overflow on right col on dashboard;

--- a/ansible/roles/c2-open-ondemand/files/var/www/ood/public/assets/css/custom.css
+++ b/ansible/roles/c2-open-ondemand/files/var/www/ood/public/assets/css/custom.css
@@ -1,5 +1,6 @@
 .dash-section {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: visible;
 }
 
 .col-md-4 {
@@ -50,6 +51,9 @@
             }
         }
 
+        div.text-center{
+            display: flex;
+        }
         .app-launcher {
             border-radius: 6px;
             height: auto;
@@ -58,15 +62,16 @@
 
         .app-launcher .app-icon {
             float: left;
-            margin: 0;
-            padding: 0;
+            margin: 6px 12px 6px 0;
+            padding:  0;
             height: 50px;
             width: auto;
+            align-self: center
         }
 
         .app-launcher .app-title {
             text-align: left;
-            padding: 6px 0;
+            align-self: center
         }
 
         .app-description {
